<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_converter">Currency Converter</string>
    <string name="add_expense_txt">+</string>
    <string name="manuel_input_hint">Insert expense amount here</string>
    <string name="confirm_btn">CONFIRM</string>

    <!--expense list strings-->
    <string name="expenseList_hint_label">Enter amount here.</string>
    <string name="expenseList_hintDesc_label">Enter description here. (optional)</string>
    <string name="expenseList_title_label">Value</string>
    <string name="expenseList_desc_label">Description</string>
    <string name="expenseList_category_label">Category</string>
    <string name="expenseList_date_label">Date</string>
    <string name="expenseList_is_planned_expense">Scheduled Expense</string>

    <!--currency converter strings-->
    <string name="enter_amount_hint">Enter Amount</string>
    <string name="convert_button_text">Convert</string>
    <string name="converted_amount">Converted Amount: %1$.2f</string>
    <string name="convert_settings">Currency Converter</string>

    <!--category array list-->
    <string-array name="categories_array">
        <item>Personal</item>
        <item>Bills</item>
        <item>Utilities</item>
        <item>Transportation</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Gift(s)</item>
        <item>Other Fees</item>
    </string-array>
</resources>