<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_menu_wish_list"
            android:title="@string/menu_wish_list" />

        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/baseline_currency_exchange_24"
            android:title="@string/menu_converter" />


    </group>
</menu>